// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render summary with more or no expenses 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing 
      <span>
        3
      </span>
       
       expenses 
       totalling
       
      <span>
         $64.61
      </span>
    </h1>
    <div
      className="page-header__actions"
    >
      <Link
        className="btn btn--primary"
        to="/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;

exports[`should render summary with one expense 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing 
      <span>
        1
      </span>
       
       expense 
       totalling
       
      <span>
         $10.87
      </span>
    </h1>
    <div
      className="page-header__actions"
    >
      <Link
        className="btn btn--primary"
        to="/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;
